2008-09-06  Alper KANAT  <alperkanat@gmail.com>

	* blog/feeds.py, urls.py: raptiye can output a rss feed for any tag now..
	niceeee!.. :)
	* blog/models.py, extra/webcal.py, templates/users/profile.html,
	templates/blog/homepage.html, templates/frontpage/homepage.html: All
	datetime objects shows two digit months and days now..
	* extra/messages.py: corrected a typo..
	* templates/blog/feedburner.html: feedburner has the new feed now..
	* templates/blog/sidebar.html, templates/frontpage/base.html: all rss feed
	links comes from the frontpage model now..
	
2008-09-05  Alper KANAT  <alperkanat@gmail.com>

	* blog/feeds.py: trying to change the locale to make it valid for RFC..
	* session_messages: added..
	* settings-example.py, extra/messages.py, users/views.py: bundled
	session_messages app into raptiye.. this saves a lot of time for me on the
	production server..
	* blog/feeds.py, templates/frontpage/base.html, urls.py: raptiye now also
	has atom feed.. :)
	* comments/views.py: fixed a bug for comments..
	* media/js/raptiye.js: Closed the debugging mode of JS..
	* blog/feeds.py: No need to have try-except in the blocks because raptiye
	doesn't work without the frontpage..
	* frontpage/models.py: Change default limit of rss from 5 to 10..
	* templates/frontpage/base.html: closing the meta tag..
	* templates/feeds/latest_title.html,
	templates/feeds/latest_description.html: some rss validation improvement..
	* urls.py: changed the rss feed name..
	
2008-09-04  Alper KANAT  <alperkanat@gmail.com>

	* settings-example.py, extra/initials.py: removed english mail address..
	* extra/messages.py, blog/views.py, users/views.py: Corrected bugs that my
	friends are talking about.. Added a function to handle messaging to the
	user..
	* templates/blog/detail.html: thanks to Ozan GÜVEN, the detail page now
	shows the title of the entry as page title..
	* users/forms.py: thanks to Ozan GÜVEN, username validation is added..
	
2008-09-03  Alper KANAT  <alperkanat@gmail.com>
