@@ -1,3 +1,9 @@
+2008-09-07  Alper KANAT  <alperkanat@gmail.com>
+
+	* blog/templatetags/blog_filters.py, templates/blog/pagination.html: search
+	pagination works correctly now.. thanks to Ozan GÜVEN who made me realize
+	this problem..
+
 2008-09-06  Alper KANAT  <alperkanat@gmail.com>
 
 	* blog/feeds.py, urls.py: raptiye can output a rss feed for any tag now..
